--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Montserrat');
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
 
 .topheader {
   background-color: #174c80;
@@ -34,11 +18,14 @@
 }
 
 .results--section {
-  padding: 20px 0px;
-  margin-top: 40px;
+  padding: 10px 15px;
+  margin-top: 10px;
 }
+
 
 h1 {
   text-align: center;
-  font-size: 30px;
+  font-size: 12px;
+  letter-spacing: 1.52em;
+  margin-left: 25px;
 }
