--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -9,14 +9,21 @@
 }
 
 .today--section__box {
-  background-color: rgb(165, 68, 68);
+  background-color: rgb(24,28,44);
   padding: 10px;
-  border-radius: 4px;
-  box-shadow: 0 1px 2px 0 rgba(250, 250, 250, 0.05);
+  border-radius: 14px;
+  box-shadow:  5px 5px 20px 0 rgba(2, 2, 2, 0.5);
+}
+
+.symbol--icon{
+  width: 20%;
+  display: block;
+  position: absolute;
+
 }
 
 .btc--section {
-  text-align: center;
+  padding-left: 30%;
   border-right: 1px solid #dae1e9;
 }
 
